# Haskell-Projects

./: README.md  README.md.orig  README_REMOTE_61128.md
bayesian-pragmatics/: README.md  readme  readme.orig
bayesian-pragmatics/models/: Dice.hs  RSA.hs  RSA_2.hs
bayesian-pragmatics/rsa/: RSA.hi  RSA.hs  adversarialRSA.hs  authenticityRSA.hs  backupnotes.hs  bayesian_dialectic.hs  bricolageRSA.hs  countersignallingRSA.hs  dirichletversion.webppl  dualAgentRSA.hs  elegantRSA.hs  hyperboleRSA.hs  ironyRSA.hs  ironyRSA.webppl  jointRSA.hs  noqudirony.webppl  recursiveRSA.hs  rsa.cabal  schellingRSA.hs  semanticsRSA.hs  socialRSA.hs  speakerRSA.hs  utils.hs
bayesian-pragmatics/src/: BayesUtils.hs
bayesian-pragmatics/src/Control/Monad/Bayes/: Class.hi  Class.hs  Conditional.hs  Deterministic.hi  Deterministic.hs  Dice.hs  Enumerator.hi  Enumerator.hs  (+10 more)
bayesian-pragmatics/src/Numeric/: LogDomain.hi  LogDomain.hs
bayesian-pragmatics/src/Statistics/Distribution/: Polymorphic.hi
bayesian-presupposition/Files/: data.json  data.py  experimentaldata.py  outputfile.txt  projectmodel.js
folds/: freeMonadInterpreter.hs  freeMonadInterpreterWithMonadicFold.hs
lens/: lens.hs
monadic-dynamic-logic/: monadiclogic.hs  readme.txt
monads-for-natural-language-semantics/: ContTGrammar.hs  ExceptTGrammar.hs  Grammar.hs  IdentityGrammar.hs  ListTGrammar.hs  ReaderTGrammar.hs  StateTGrammar.hs  WriterTGrammar.hs  alternateGrammar.hs  readme.txt  simpleGrammar.hs
parsing/: combinatorParsers.hs  megaparsec.hs  replParser.hs
probability/: probabilisticProgrammingLinguistics.hs
(+14 files in other folders)
